# pylint_mcp

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/: .gitignore  config.py  main.py  packages.puml  pylint_core.py  pyproject.toml  shared_mcp_object.py
src/tools/: combined_reporter.py  git_repo_reader.py  pylint_core.py  pylint_tools.py  source_code.py  tool.py
