[project]
name = "mcp_quick_start_py"
version = "0.1.0"
description = "The MCP quick start repo is to help make a start at MCP development, with an example tool already created. "
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "fastapi[standard]>=0.110.0",
    "fastmcp>=2.10.6",
    "httpx>=0.27.0",
    "mcp[cli]>=1.6.0",
    "pylint>=3.3.7",
    "python-dotenv",
    "typing-extensions>=4.13.2",
]
